kubernetes/gateway-deployment-primary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-primary
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app-part: gateway-primary
  template:
    metadata:
      labels:
        app: gateway
        app-part: gateway-primary
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: cloud.google.com/gke-preemptible
                    operator: NotIn
                    values:
                      - 'true'
      containers:
        - name: nginx
          image: nginx:1.19-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
            - containerPort: 8002
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          configMap:
            name: gateway
