kubernetes/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
