kubernetes/yum-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yum-gateway
  labels:
    app: yum-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yum-gateway
  template:
    metadata:
      labels:
        app: yum-gateway
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - yum-gateway
      containers:
        - name: nginx
          image: nginx:1.17-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config
          configMap:
            name: yum-gateway
---
kind: Service
apiVersion: v1
metadata:
  name: yum-gateway
spec:
  selector:
    app: yum-gateway
  ports:
    - protocol: TCP
      port: 80
