kubernetes/03_gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: fullstaq-ruby
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - gateway
      containers:
        - name: nginx
          image: nginx:1.17-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
            - containerPort: 8002
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d
          resources:
            limits:
              cpu: '1'
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: gateway
---
kind: Service
apiVersion: v1
metadata:
  name: gateway
  namespace: fullstaq-ruby
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - name: apt
      protocol: TCP
      port: 8001
      nodePort: 30701
    - name: yum
      protocol: TCP
      port: 8002
      nodePort: 30702
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway
  namespace: fullstaq-ruby
spec:
  podSelector:
    matchLabels:
      app: gateway
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8001
        - protocol: TCP
          port: 8002
